--- a/app/src/main/res/navigation/playground_navigation.xml
+++ b/app/src/main/res/navigation/playground_navigation.xml
@@ -3,32 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/playground_navigation"
-    app:startDestination="@id/main_fragment">
+    app:startDestination="@id/mainFragment">
 
     <fragment
-        android:id="@+id/main_fragment"
-        android:name="com.khayrul.playground.ui.presentations.main.MainFragment"
+        android:id="@+id/mainFragment"
+        android:name="com.khayrultw.playground.ui.home.HomeFragment"
         android:label="fragment_main"
-        tools:layout="@layout/fragment_main" >
+        tools:layout="@layout/fragment_home" >
         <action
-            android:id="@+id/action_fragment_main_to_fragment_b"
-            app:enterAnim="@anim/slide_from_right"
-            app:exitAnim="@anim/slide_to_left"
-            app:popEnterAnim="@anim/slide_from_left"
-            app:popExitAnim="@anim/slide_to_right"
-            app:destination="@id/fragment_b" />
+            android:id="@+id/action_home_to_menu"
+            app:destination="@id/menuFragment" />
     </fragment>
     <fragment
-        android:id="@+id/fragment_b"
-        android:name="com.khayrul.playground.ui.presentations.FragmentB"
-        android:label="fragment_b"
-        tools:layout="@layout/fragment_b" >
-        <action
-            android:id="@+id/action_fragment_b_to_fragment_main"
-            app:enterAnim="@anim/slide_from_right"
-            app:exitAnim="@anim/slide_to_left"
-            app:popEnterAnim="@anim/slide_from_left"
-            app:popExitAnim="@anim/slide_to_right"
-            app:destination="@id/main_fragment" />
-    </fragment>
+        android:id="@+id/menuFragment"
+        android:name="com.khayrultw.playground.ui.menu.MenuFragment"
+        android:label="fragment_menu"
+        tools:layout="@layout/fragment_menu" />
 </navigation>
